--- a/src/games.html
+++ b/src/games.html
@@ -457,7 +457,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://www.friv.com/z/games/bobtherobber/index-x.html')">
-    <img style="border-radius: 25px;" src="https://i.imgur.com/oxdKk2L.jpg"></a>
+    <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/cf20360210c3aff2eff2e.jpg"></a>
       <p3>Bob the Robber</p3>
     </div>
   </div>
@@ -465,7 +465,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://szhong.4399.com/4399swf//upload_swf/ftp43/chenling/20230516/9/index.htm')">
-    <img style="border-radius: 25px;" src="https://i.imgur.com/6yT7e3K.png"></a>
+    <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/c4c019d25134f6e4da472.png"></a>
       <p3>Bouncy Slime</p3>
     </div>
   </div>
@@ -473,7 +473,7 @@ searchbar.addEventListener("input", function() {
 <div class="row shooter">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://bulletforceunblocked.github.io/')">
-    <img style="border-radius: 25px;" src="https://i.imgur.com/KfkphtG.png"></a>
+    <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/d405dbdf41458affc48f2.jpg"></a>
       <p3>Bullet Force</p3>
     </div>
   </div>
@@ -568,7 +568,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://szhong.4399.com/4399swf//upload_swf/ftp37/cwb/20211025/03/index.html')">
-    <img style="border-radius: 25px;" src="https://i.imgur.com/QOFZjZ7.png" ></a>
+    <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/69db6299b7bae14bba779.png" ></a>
       <p3>Catch the Candy</p3>
     </div>
   </div>
@@ -628,7 +628,7 @@ searchbar.addEventListener("input", function() {
 <div class="row cars">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://g.igroutka.ru/games/164/2afwOT8yZFmeYWGJ/2/crazy_cars/')">
-    <img style="border-radius: 25px;" src="https://i.imgur.com/IxUXoAS.png" ></a>
+    <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/15a2e8be8901b07219489.jpg" ></a>
       <p3>Crazy Cars</p3>
     </div>
   </div>
@@ -1074,7 +1074,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a  class="animals" onclick="go('https://webglmath.github.io/worlds-hardest-game-2/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/i2gjiW6.png"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/b28f9adf2e75fe03db373.jpg"></a>
       <p3>Hardest Game 2</p3>
     </div>
   </div>
@@ -1082,7 +1082,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a  class="animals" onclick="go('https://webglmath.github.io/worlds-hardest-game-3/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/O7siUNJ.png"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/2138947e6f1edf370fc9d.png"></a>
       <p3>Hardest Game 3</p3>
     </div>
   </div>
@@ -1347,7 +1347,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://webglmath.github.io/merge-cakes/')">
-        <img style="border-radius: 25px;" src="/assets/images/icons/merge-cakes.png"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/347e14d0e8190292ecfbc.jpg"></a>
       <p3>Merge Cakes</p3>
     </div>
   </div>
@@ -1540,7 +1540,7 @@ searchbar.addEventListener("input", function() {
 <div class="row idle">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://mathgames66.github.io/othergames/paperio2/index.html')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/kfxS5aK.jpg"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/a910575cd1f6f3b0a1183.jpg"></a>
       <p3>Paper.io 2</p3>
     </div>
   </div>
@@ -1650,7 +1650,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a href="games/riddle school/index.html">
-        <img style="border-radius: 25px;" src="/assets/images/icons/riddle-school.webp"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/8806f354f83673ca47f55.jpg"></a>
       <p3>Riddle School</p3>
     </div>
   </div>
@@ -1770,7 +1770,7 @@ searchbar.addEventListener("input", function() {
 <div class="row idle">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://webglmath.github.io/stickman-fighter-epic-battle/')">
-        <img style="border-radius: 25px;" src="/assets/images/icons/stickman-fighter.png"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/038f6f0a8a54aba7ef509.png"></a>
       <p3>Stickman Fighter</p3>
     </div>
   </div>
@@ -1780,7 +1780,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://webglmath.github.io/stickman-fighter-epic-battle-2/l')">
-        <img style="border-radius: 25px;" src="/assets/images/icons/stickman-fighter2.png"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/3472e496be9efd1b84b59.jpg"></a>
       <p3>Stickman Fighter 2</p3>
     </div>
   </div>
@@ -1800,7 +1800,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a class="game" onclick="go('https://webglmath.github.io/stickmerge/')">
-        <img style="border-radius: 25px;" src="/assets/images/icons/stick-merge.png"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/132b4eff24ef261ef5817.jpg"></a>
       <p3>Stick Merge</p3>
     </div>
   </div>
@@ -1810,7 +1810,7 @@ searchbar.addEventListener("input", function() {
 <div class="row cars">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a class="game" onclick="go('https://ubg77.github.io/edit/stunt-car-challenge-3/')">
-        <img style="border-radius: 25px;" src="/assets/images/icons/stunt-car3.png"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/01d1efc0a886a89e22376.png"></a>
       <p3>Stunt Car 3</p3>
     </div>
   </div>
@@ -1999,7 +1999,7 @@ searchbar.addEventListener("input", function() {
 <div class="row shooter">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://static.arcadespot.com/retroemulator.php?system=nds&game=2017/11/the-simpsons-game.zip')">
-        <img style="border-radius: 25px;" src="/assets/images/icons/squid-shooter.png"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/38119d96948bee0e59f4a.jpg"></a>
       <p3>Squid Shooter</p3>
     </div>
   </div>
@@ -2047,7 +2047,7 @@ searchbar.addEventListener("input", function() {
 <div class="row sim">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://i.imgur.com/Mzj2vX0.png')">
-        <img style="border-radius: 25px;" src="/assets/images/icons/tiger-sim.png"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/be110f2581c540d479d37.png"></a>
       <p3>Tiger Sim</p3>
     </div>
   </div>
@@ -2057,7 +2057,7 @@ searchbar.addEventListener("input", function() {
 <div class="row shooter">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://bitlifeonline.github.io/class2623/time-shooter/')">
-        <img style="border-radius: 25px;" src="/assets/images/icons/time-shooter.jfif"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/c6835fcd2a0bbce3f83a1.jpg"></a>
       <p3>Time Shooter</p3>
     </div>
   </div>
@@ -2278,7 +2278,7 @@ searchbar.addEventListener("input", function() {
 <div class="row shooter">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://classroomjq.github.io/class276223/subway-clash-3d/')">
-        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/8bbf62908c0ebe19f2c2c.png"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/464a9ba337ba96ade9822.jpg"></a>
       <p3>Subway Clash</p3>
     </div>
   </div>
