--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
                 <button class="discord-btn2">Making School more fun</button>
               </div>
       <div class="link-gen">
-        <p style="margin-top:15px;">Check out our new link generator <a style="color:#fff;" href="https://don-t.online">don-t.online</a></p>
+        <p style="margin-top:15px;">Check Out Our New Link Generator<a style="color:#fff;" href="https://don-t.online">schoolsearch.online</a></p>
       </div>
         <br><br>
         <p class="text-center"></p>
