--- a/src/games.html
+++ b/src/games.html
@@ -344,7 +344,7 @@ searchbar.addEventListener("input", function() {
 </div>
  <div class="row sports 2p">
   <div class="span1">
-      <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://slope-game.github.io/new3723/basket-random/')">
+      <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('//html5.gamedistribution.com/rvvASMiM/bf1268dccb5d43e7970bb3edaa54afc8/index.html?gd_sdk_referrer_url=https%3A%2F%2F2player.co%2Fbasket-random&amp;gd_zone_config=eyJwYXJlbnRVUkwiOiJodHRwczovLzJwbGF5ZXIuY28vYmFza2V0LXJhbmRvbSIsInBhcmVudERvbWFpbiI6IjJwbGF5ZXIuY28iLCJ0b3BEb21haW4iOiJ1bmRlZmluZWQiLCJoYXNJbXByZXNzaW9uIjpmYWxzZSwibG9hZGVyRW5hYmxlZCI6dHJ1ZSwiaG9zdCI6Imh0bWw1LmdhbWVkaXN0cmlidXRpb24uY29tIiwidmVyc2lvbiI6IjEuNS4xNiJ9')">
     <img style="border-radius: 25px;" src="/assets/images/icons/br.jpeg"></a>
       <p3>Basket Random</p3>
     </div>
